<resources>
    <string name="app_name">死線達人</string>
    <string name="due_notification">即將到期提醒</string>
    <string name="expired">已到期</string>
    <string name="upcoming">即將到期</string>
    <string name="due_notification_setting">即將到期百分比</string>
    <string name="due_notification_setting_description">系統會在到達您指定的百分比時，將作業標為即將到期。</string>
    <string name="due_toggle_description">將在作業到達您所指定即將到期的百分比時，主動提醒您。</string>
    <string name="due_toggle_description_off">將不會在作業即將到期時提醒您。</string>
    <string name="late_notification">逾時提醒</string>
    <string name="due_notification_channel_description">系統將在作業即將到期時，自動通知您。</string>
    <string name="late_notification_description_off">將不會在作業到期時，自動通知您。</string>

    <string name="late_notification_channel_description">系統將在作業逾時時，自動通知您。</string>

    <string name="cant_set_notification">錯誤：無法設定通知（無法獲取ID）</string>

    <string name="due_notification_description">%1$s 即將於 %2$s 截止</string>
    <string name="late_notification_description">%1$s 已經截止了</string>
    <string name="percentage_changed">進度變更</string>
    <string name="percentage_changed_msg">是否要將過往作業套用新設定的百分比設定？\n可能會造成重複通知。</string>
    <string name="percentage_changed_positive">全部套用</string>
    <string name="percentage_changed_negative">不需要</string>
    <string name="action_settings">設定</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">作業</string>
    <string name="second_fragment_label">內容</string>
    <string name="fragment_q_r_share_label">分享</string>
    <string name="fragment_add_q_r_label">掃描</string>
    <string name="first_fragment_add_label">新增</string>
    <string name="second_fragment_add_label">新增作業</string>
    <string name="too_many_assignments">作業無法超過1000筆，請清除一些作業後再試。</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="empty_assign">沒有作業</string>
    <string name="empty_due_assign">沒有排程中的作業</string>
    <string name="empty_courses">沒有課程</string>
    <string name="celebrate_vacation">還沒放假？點擊「+」來新增一堂課吧！</string>
    <string name="celebrate">是不是應該慶祝一下？</string>
    <string name="added_successfully">新增成功</string>
    <string name="title_activity_class">QR新增作業</string>
    <string name="add_qr_code">掃描QR Code</string>
    <string name="add_assign">新增作業</string>
    <string name="add_course">新增課程</string>
    <string name="edit_course_title">編輯課程</string>
    <string name="course_name_hint">課程名稱</string>
    <string name="course_teacher_hint">教師名稱</string>
    <string name="assign_name_hint">作業名稱</string>
    <string name="assign_note_hint">作業備註</string>
    <string name="date_pick">選取時間</string>
    <string name="date_assigned">指派時間</string>
    <string name="date_due">截止時間</string>
    <string name="alert">提醒</string>
    <string name="alert_msg">無任何課程，可直接輸入課程名稱來快速新增</string>
    <string name="alert_msg_date_error">起始時間與截止時間順序錯誤</string>
    <string name="new_courses_from_qr_hint">含有不存在的課程，請問是否直接新增該課程？</string>
    <string name="alert_msg_date_confirm">對調時間</string>
    <string name="alert_msg_date_success">時間對調成功</string>
    <string name="empty">不要新增課程</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="cancel_course">刪除課程</string>
    <string name="deleted">已刪除%1$d個作業</string>
    <string name="undo">復原</string>
    <string name="undo_successfully">復原成功</string>
    <string name="ok">好</string>
    <string name="alert_msg_required">請填入必填欄位</string>
    <string name="day">天</string>
    <string name="hour">小時</string>
    <string name="min">分鐘</string>
    <string name="sec">秒</string>
    <string name="save">儲存</string>
    <string name="done">已完成</string>
    <string name="late">逾時</string>
    <string name="queued">排程中</string>

    <string name="finished">標示完成</string>
    <string name="unfinish">標示未完成</string>
    <string name="editAssign">編輯作業</string>
    <string name="confirm_del">確定要刪除嗎？</string>
    <string name="confirm_del_courses">確定要刪除嗎？\n所有此課程的作業將會一並刪除。</string>

    <string name="share_hint">點擊右上方分享作業給您的朋友，朋友們只需使用缺學分或Scholarium掃描即可輕鬆新增您所建立的作業。</string>
    <string name="courses">課程</string>
    <!-- Preference Titles -->
    <string name="status_header">進度</string>
    <string name="notification_header">通知</string>
    <string name="notification_system_setting">變更通知設定</string>
    <string name="notification_system_setting_description">進入系統設定以變更通知類別的設定</string>
    <string name="status_setting">提醒百分比</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="about">關於</string>
    <string name="byAuthor">作業提醒 By 余致學</string>
    <string name="originally_ios_scholarium_by">Inspired By Scholarium (iOS)</string>
    <string name="notification_prompt_description">掌握作業繳交期限</string>
    <string name="notification_prompt_title">開啟通知</string>
    <string name="open_notification">開啟通知</string>
    <string name="welcome">歡迎</string>
    <string name="welcome_description">感謝下載此App\n分享及紀錄各科作業進度，避免重修就好。</string>
    <string name="new_assign_instruction">新增作業</string>
    <string name="course">課程</string>
    <string name="course_description">各項課程作業進度一目了然。\n點擊右下角按鈕新增課程。</string>
    <string name="course_instruction2">編輯課程</string>
    <string name="course_instruction_description">長按或向右滑動課程即可編輯課程資訊。</string>
    <string name="new_assign_instruction_description">點擊右下角按鈕新增作業。</string>
    <string name="use_app_to_read_qrcode">使用缺學分來讀取條碼</string>
    <string name="assignment_qrcode">作業條碼</string>
    <string name="included_info">內含資訊</string>
    <string name="add_widget">新增小工具</string>
    <string name="app_widget_description" >在桌面上查看未完成的作業。</string>
    <string name="assignment_not_loaded">載入中...</string>
    <string name="assignment_not_loaded_hint">若遲未載入\n請重新加入小工具</string>
    <string name="addOrEdit">新增或編輯作業</string>
    <string name="previous_page">上一頁</string>
    <string name="next_page">下一頁</string>
    <string name="due_status">到期狀況</string>
    <string name="assign_recview_date_img_desc">起始日期及到期日期</string>
    <string name="qr_error">請確認條碼內容</string>
    <string name="load_img">由相簿讀取QRCode</string>
    <string name="widget_date_format_example">2天10小時</string>
    <string name="assignment_example">微積分作業50題</string>
</resources>