<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/notification_header">
    <!--
        <SwitchPreferenceCompat
            app:key="due_notification"
            app:summaryOff="@string/due_toggle_description_off"
            app:summaryOn="@string/due_toggle_description"
            app:title="@string/due_notification" />

        <SwitchPreferenceCompat
            app:key="late_notification"
            app:summaryOff="@string/late_notification_description_off"
            app:summaryOn="@string/late_notification_channel_description"
            app:title="@string/late_notification" />
            -->

        <Preference
            android:icon="@drawable/bell"
            android:key="goto_setting"
            android:title="@string/notification_system_setting"
            android:summary="@string/notification_system_setting_description" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/about"
        >

        <Preference android:title="@string/byAuthor"
            android:summary="@string/originally_ios_scholarium_by"
            android:icon="@drawable/information_outline"/>
    </PreferenceCategory>



</PreferenceScreen>