<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.appfinalproject_10130492.MainAssignmentsFirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:enterAnim="@anim/right_left"
            app:exitAnim="@anim/fade"
            app:popExitAnim="@anim/left_right"
            app:destination="@id/SecondFragment" />

    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.appfinalproject_10130492.MainSecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:enterAnim="@anim/right_left"
            app:popEnterAnim="@anim/right_left"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_QRShareFragment"
            app:enterAnim="@anim/right_left"
            app:exitAnim="@anim/fade"
            app:popExitAnim="@anim/left_right"
            app:destination="@id/QRShareFragment" />
    </fragment>
    <fragment
        android:id="@+id/QRShareFragment"
        android:name="com.example.appfinalproject_10130492.MainQRShareFragment"
        android:label="@string/fragment_q_r_share_label"
        tools:layout="@layout/fragment_q_r_share">
        <action
            android:id="@+id/action_QRShareFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/right_left"
            app:popEnterAnim="@anim/right_left" />
    </fragment>
</navigation>