<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/sec_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="作業名稱"
            android:textSize="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/sec_status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sec_name">

            <ImageView
                android:id="@+id/sec_status_ico"
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/done_48px" />

            <TextView
                android:id="@+id/sec_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/done"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sec_name">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_weight="1"
                android:src="@drawable/book_48px" />

            <TextView
                android:id="@+id/sec_course_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="課程名稱"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin_course">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_weight="1"
                android:src="@drawable/calendar_month_48px" />

            <TextView
                android:id="@+id/duedate_sec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="到期日期"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lin_cal">

            <TextView
                android:id="@+id/sec_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="備註"
                android:textSize="20sp" />


            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="48sp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/sec_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="30sp" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/day" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="48sp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/sec_hour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="30sp" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom|center_horizontal"
                                android:text="@string/hour" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="48sp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/sec_min"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="30sp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/min" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="48sp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/sec_second"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="30sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/sec" />
                        </LinearLayout>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"

                        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/finished" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>