<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="18dp"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recyclerview_border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:cardBackgroundColor="@color/material_on_primary_disabled"
        app:contentPaddingBottom="10dp"
        app:contentPaddingTop="10dp"
        app:rippleColor="@color/material_on_primary_emphasis_medium">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/courses_sec_titie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="課程標題"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/courses_sec_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="老師名字" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/late"
                        android:tint="@color/late"
                        app:srcCompat="@drawable/error_48px" />

                    <TextView
                        android:id="@+id/courses_sec_late"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/queued"
                        android:tint="@color/blue"
                        app:srcCompat="@drawable/alarm_on_48px" />

                    <TextView
                        android:id="@+id/courses_sec_queued"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/finished"
                        app:srcCompat="@drawable/check_circle_48px" />

                    <TextView
                        android:id="@+id/courses_sec_finished"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>